feat: delete, post routes + docs for single id
