# src/routes/services.ts
@@ -1,6 +1,3 @@
-
-//@ts-nocheck
-
 import { Router, Request, Response } from 'express'
 import services from '../data/services'
 
@@ -10,7 +7,7 @@ router.get('/', (_: Request, res: Response) => {
   res.json(services)
 })
 
-
+//@ts-expect-error
 router.get('/:id', (req: Request, res: Response) => {
   const id = parseInt(req.params.id)
   const item = services.find((item) => item.id === id)
@@ -20,6 +17,15 @@ router.get('/:id', (req: Request, res: Response) => {
   }
 
   res.json(item)
+})
+
+router.post('/', (_: Request, res: Response) => {
+  res.status(201).json({ id: Date.now(), response: 200 })
+})
+
+router.delete('/:id', (req: Request, res: Response) => {
+  const id = req.params.id
+  res.status(204).json({ id, response: 200 })
 })
 
 export default router
